<resources>
    <string name="app_name">SMT Manager</string>
    <string name="login">Login</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="signin">SignIn</string>
    <string name="submit">Submit</string>
    <string name="enter_phone_number">Enter Phone number</string>
    <string name="enter_email">Enter Email</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="signup">SignUp</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="expense">Expense</string>
    <string name="logout">Logout</string>
    <string name="budget">Budget</string>
    <string name="setting">Setting</string>
    <string name="open_nav">Open Nevigation\n</string>
    <string name="close_nav">Close Nevigation\n</string>
    <string name="bank">Bank</string>
    <string name="profile">Profile</string>
    <string name="report">Report</string>
    <string name="income">Income</string>
    <string name="edit_income">Edit Income</string>
    <string name="description">Description</string>
    <string name="date_yyyy_mm_dd">Date (YYYY-MM-DD)</string>
    <string name="amount">Amount</string>
    <string name="category">Category</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="add_new_income">Add New Income</string>
    <string name="add_new_expense">Add New Expense</string>
    <string name="edit_expense">Edit Expense</string>
    <string name="date">Date</string>
    <string name="todo">TODO</string>
    <string-array name="expense_categories">
        <item>Food</item>
        <item>Transportation</item>
        <item>Entertainment</item>
        <item>Utilities</item>
        <item>Shopping</item>
        <item>Other</item>
    </string-array>
    <string-array name="income_categories">
        <item>Salary</item>
        <item>Freelancing</item>
        <item>Investments</item>
        <item>Gifts</item>
        <item>Rental Income</item>
        <item>Other</item>
    </string-array>


</resources>