<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:checkableBehavior="single">
<!--        <item-->
<!--            android:id="@+id/nav_home"-->
<!--            android:title="@string/home"-->
<!--            android:icon="@drawable/baseline_home_24"/>-->
        <item
            android:id="@+id/nav_income"
            android:title="@string/income"
            android:icon="@drawable/img_8"/>
        <item
            android:id="@+id/nav_expense"
            android:title="@string/expense"
            android:icon="@drawable/img_4"/>
        <item
            android:id="@+id/nav_budget"
            android:title="@string/budget"
            android:icon="@drawable/budget"/>
        <item
            android:id="@+id/nav_setting"
            android:title="@string/setting"
            android:icon="@drawable/baseline_settings_24"/>
    </group>

    <item
        android:title="">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:title="@string/logout"
                android:icon="@drawable/baseline_logout_24"/>
        </menu>
    </item>
</menu>
