<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="#F9F9F9">

    <!-- Title TextView -->
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_new_income"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="#333333"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"/>

    <!-- Description Input -->
    <EditText
        android:id="@+id/editTextDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        android:inputType="text"
        android:layout_below="@id/tvTitle"
        android:layout_marginBottom="16dp"
        android:padding="12dp"
        android:background="@drawable/add_expense_background" />

    <!-- Date Input -->
    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Select Date"
        android:focusable="false"
        android:clickable="true"
        android:inputType="date"
        android:layout_below="@id/editTextDescription"
        android:layout_marginBottom="16dp"
        android:padding="12dp"
        android:background="@drawable/add_expense_background"/>

    <!-- Amount Input -->
    <EditText
        android:id="@+id/editTextAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/amount"
        android:inputType="numberDecimal"
        android:layout_below="@id/editTextDate"
        android:layout_marginBottom="16dp"
        android:padding="12dp"
        android:background="@drawable/add_expense_background"/>

    <!-- Category Label and Spinner -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/editTextAmount"
        android:layout_marginBottom="16dp">

        <!-- Category Label -->
        <TextView
            android:id="@+id/edtCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:textSize="18sp"
            android:background="@drawable/add_expense_background"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="8dp"/>

        <!-- Category Spinner -->
        <Spinner
            android:id="@+id/spinnerCategory"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>

    <!-- Save Button -->
    <!-- Save Button -->
    <Button
        android:id="@+id/buttonSave"
        style="@style/SaveButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:padding="12dp"/>

    <!-- Cancel Button -->
    <Button
        android:id="@+id/buttonCancel"
        style="@style/CancelButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:layout_toStartOf="@id/buttonSave"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:padding="12dp"/>

</RelativeLayout>
